@@ -1,4 +1,5 @@
 Sigil 0.6.0 TBA 
+    - Implement issue 1590: Insert image should allow insert from disk.
     - Implement issue 1557: Sigil requires Qt 4.8 or above.
     - Implement issue 1586: Spellcheck should allow setting a keyboard shortcut for Ignore Word to speed editing.
     - Implement issue 1585: Spellcheck should have a menu entry to clear all ignored words.
